--- a/packages/EasterEgg/res/values/strings.xml
+++ b/packages/EasterEgg/res/values/strings.xml
@@ -19,7 +19,7 @@ Copyright (C) 2016 The Android Open Source Project
     <string name="notification_name" translatable="false">Android Neko</string>
     <string name="default_tile_name" translatable="false">\????</string>
     <string name="notification_title" translatable="false">A cat is here.</string>
-    <string name="default_cat_name" translatable="false">Cat #%s</string>
+    <string name="default_cat_name" translatable="false">%s</string>
     <string name="directory_name" translatable="false">Cats</string>
     <string name="confirm_delete" translatable="false">Forget %s?</string>
     <string-array name="food_names" translatable="false">
@@ -45,9 +45,9 @@ Copyright (C) 2016 The Android Open Source Project
     </integer-array>
     <integer-array name="food_new_cat_prob">
         <item>0</item>
-        <item>5</item>
-        <item>35</item>
-        <item>65</item>
-        <item>90</item>
+        <item>20</item>
+        <item>50</item>
+        <item>80</item>
+        <item>105</item>
     </integer-array>
 </resources>
